# CLGLParticles-Cpp

./: .gitignore  CMakeLists.txt  generate-project-vs2019.bat
cl/: particle.cl
shaders/: shader.frag  shader.geom  shader.vert
src/: GLCLParticles.cpp
